[tool.poetry]
name = "milfaker"
version = "0.1.0"
description = "generate realistic mock military data"
authors = ["sereno <sereno.dominguez@blackcape.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^30.8.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
